# chopper

./: chopper.py  gui.py  pyproject.toml
assets/: Selfish Grizzly.m4a
chopper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
