[tool.poetry]
name = "chopper"
version = "0.1.0"
description = ""
license =  ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
librosa = "^0.7.1"
pydub = "^0.23.1"
soundfile = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
